--- a/css/engine.css
+++ b/css/engine.css
@@ -59,6 +59,7 @@ div.metric-button {
 
 div.intro { float:right; width:300px; position: absolute; text-align:justify; left: 666px; top:23px; padding:0px 30px 0 10px; line-height:16px;}
 h3 { font-size: 16px; font-weight:normal; margin:0; padding:0; display:inline; }
-.title { padding-left:60px; }
+.title { padding-left:60px; height:57px; }
 .icon { float:left; }
+.keys { margin-left: auto; margin-right:auto; width:219px; }
 hr { color: #000; background-color:#000; height:1px; border:0; margin:25px 0 20px 0;}
